fixed alignment between post image and header

--- a/blog/static/css/style.less
+++ b/blog/static/css/style.less
@@ -71,6 +71,7 @@ h4 { font-size: 14px; }
 
 .main-content {
    min-height: 600px;
+   padding: 0 25px 0 25px;
 }
 
 #footer {
@@ -87,7 +88,6 @@ h4 { font-size: 14px; }
 .post, .post-condensed {
    margin-bottom: 2.5rem;
    font-size: 1.0em;
-   margin: 0 25px 0 25px;
 
    p {
       margin-left: 5px;
@@ -95,7 +95,7 @@ h4 { font-size: 14px; }
    }
 
    img {
-      width: 90%;
+      width: 100%;
       max-height: 100%;
       margin-left: auto;
       margin-right: auto;
